k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-ui
  namespace: k8s-demo
spec:
  selector:
    app: k8s-demo-ui
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
