k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo-ingress
  namespace: k8s-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-demo-ui
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: k8s-demo-api
            port:
              number: 80
